--- a/Qualia.Umb.VariationContextMiddleware/Qualia.Umb.VariationContextMiddleware.csproj
+++ b/Qualia.Umb.VariationContextMiddleware/Qualia.Umb.VariationContextMiddleware.csproj
@@ -8,12 +8,12 @@
         <PackageId>Qualia.Umb.VariationContextMiddleware</PackageId>
         <Title>Qualia.Umb.VariationContextMiddleware</Title>
 		<Description>
-			An umbraco cms package featuring a middleware for setting the culture, ui culture and variation context, through the use of a query param, header, or cookie.
+			An umbraco cms package featuring a middleware for setting the culture, ui culture and variation context in ajax requests, through the use of a query param, header, or cookie.
 		</Description>
 		<PackageProjectUrl>https://github.com/PagonisTasos/Qualia.Umb.VariationContextMiddleware</PackageProjectUrl>
         <PackageTags>umbraco plugin package; culture info middleware</PackageTags>
         <RootNamespace>Qualia.Umb.VariationContextMiddleware</RootNamespace>
-		<Version>1.0.0</Version>
+		<Version>1.1.0</Version>
 		<Authors>Pagonis Tasos</Authors>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
